--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Riley's NodeJS project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "hello": "node helloworld.js"
+        
   },
   "repository": {
     "type": "git",
